--- a/css/darts.css
+++ b/css/darts.css
@@ -35,6 +35,7 @@ img {
     max-width: 100%;
     display: block;
     margin: auto;
+	
 }
 #menu {
 	text-align:center;
@@ -65,5 +66,8 @@ a{
 a:hover {
 	color:black;
 	background-color:white;
+}
+#nyil {
+	padding:20px;
 }
 
